--- a/Publications.html
+++ b/Publications.html
@@ -14,15 +14,27 @@
             e.style.display = 'block';
       }
   </script>
-<h2><center>Publications</center></h2>
-<blockquote>
-  <a href="index.html">Home</a> | 
-  <a href="Publications.html">PUBLICATIONS</a> |
-  <a href="research.html">Research</a> |
-  <a href="codes.html">Codes</a> |
-  <a href="teaching.html">Teaching</a> 
-</blockquote>
-<hr>
+<!-- <h2><center>Publications</center></h2> -->
+<!-- <blockquote> -->
+<!--   <a href="index.html">Home</a> | --> 
+<!--   <a href="Publications.html">PUBLICATIONS</a> | -->
+<!--   <a href="research.html">Research</a> | -->
+<!--   <a href="codes.html">Codes</a> | -->
+<!--   <a href="teaching.html">Teaching</a> --> 
+<!-- </blockquote> -->
+<!-- <hr> -->
+
+<div class="topmenu">
+   <ul itemscope="" itemtype="http://www.schema.org/SiteNavigationElement">
+      <li itemprop="name"><a  href="index.html">HOME</a></li>
+      <li itemprop="name"><a  class="active" href="publications.html">PUBLICATIONS</a></li>
+      <li itemprop="name"><a  href="research.html">RESEARCH</a> </li>
+      <li itemprop="name"><a href="codes.html">CODES</a> </li>
+        <li itemprop="name"><a href="teaching.html">TEACHING</a> </li>
+   </ul>
+</div>
+
+<div class="block">
 <h3>Preprints</h3>
 <ol>
 <li>
@@ -459,4 +471,5 @@ Houston, TX, October 2018. [invited talk]
 San Francisco, CA, December 2014. <a href="./Files/Poster_AGU14.pdf" target="_blank">[poster presentation]</a>
 </li>
 
+</div>
 </body></html>
