--- a/codes.html
+++ b/codes.html
@@ -30,20 +30,31 @@
 <!--Get your own code at fontawesome.com-->
 <title>Mohammad Sarraf Joshaghani's Codes</title>
 <body style="background-color:white">
-<h2><center>Selected Codes</center></h2>
-<blockquote>
-  <a href="index.html">Home</a> | 
-  <a href="Publications.html">Publications</a> |
-  <a href="research.html">Research</a> |
-  <a href="codes.html">CODES</a> |
-  <a href="teaching.html">Teaching</a> 
-</blockquote>
-<hr>
-<p></p>
+<!-- <h2><center>Selected Codes</center></h2> -->
+<!-- <blockquote> -->
+<!--   <a href="index.html">Home</a> | --> 
+<!--   <a href="Publications.html">Publications</a> | -->
+<!--   <a href="research.html">Research</a> | -->
+<!--   <a href="codes.html">CODES</a> | -->
+<!--   <a href="teaching.html">Teaching</a> --> 
+<!-- </blockquote> -->
+<!-- <hr> -->
+<div class="topmenu">
+   <ul itemscope="" itemtype="http://www.schema.org/SiteNavigationElement">
+      <li itemprop="name"><a  href="index.html">HOME</a></li>
+      <li itemprop="name"><a  href="publications.html">PUBLICATIONS</a></li>
+      <li itemprop="name"><a  href="research.html">RESEARCH</a> </li>
+      <li itemprop="name"><a class="active" href="codes.html">CODES</a> </li>
+        <li itemprop="name"><a href="teaching.html">TEACHING</a> </li>
+   </ul>
+</div>
 <div><a id="overview">
+<div class="block">
     <div class="researchline">
   <div class="col-18">
-    <h3 style="display:inline"><font color="rgb(0, 0, 44)">LimitedDG</font> </h3>&#8212 
+  <!-- <h3 style="margin-bottom:-0.3em; margin-top:1.25em"> Instructor </h3> -->
+  <p></p>
+    <h3 style="display:inline; margin-top:1.25em"><font color="rgb(0, 0, 44)">LimitedDG</font> </h3>&#8212 
     Code for the numerical solution of immiscible two-phase flows in porous media, which is obtained by augmenting interior penalty DG formulation with post-processing flux and slope limiters. Resulting solutions are accurate, robust, mesh-independent, mass-conservative, and maximum-principle satisfying. The repo entails several examples of pressure-driven flow and quarter-five spot that account for gravity, capillary effects, and heterogeneity.
   <p>
   <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/LimiterDG" target="_blank"> https://github.com/msarrafj/LimiterDG</a></p> </font>
@@ -361,7 +372,7 @@ This paper presents a modeling framework&#8212mathematical model and computation
 </div></div> 
 
 
-
+</div>
 
 
 </body></html>
