--- a/index.html
+++ b/index.html
@@ -19,16 +19,31 @@
       }
   </script>
 <h2><center>Mohammad Sarraf Joshaghani</center></h2>
-<blockquote>
-  <a href="index.html">HOME</a> | 
-  <a href="Publications.html">Publications</a> |
-  <a href="research.html">Research</a> |
-  <a href="codes.html">Codes</a> |
-  <a href="teaching.html">Teaching</a> 
-</blockquote>
-<hr>
+<!-- <div class="block"> -->
+<!-- <blockquote> -->
+<!--   <a href="index.html">HOME</a> | --> 
+<!--   <a href="Publications.html">Publications</a> | -->
+<!--   <a href="research.html">Research</a> | -->
+<!--   <a href="codes.html">Codes</a> | -->
+<!--   <a href="teaching.html">Teaching</a> --> 
+<!-- </blockquote> -->
+<!-- </div> -->
+
+<div class="topmenu">
+   <ul itemscope="" itemtype="http://www.schema.org/SiteNavigationElement">
+     <li itemprop="name"><a class="active" href="index.html">HOME</a></li>
+      <li itemprop="name"><a  href="publications.html">PUBLICATIONS</a></li>
+      <li itemprop="name"><a href="research.html">RESEARCH</a> </li>
+      <li itemprop="name"><a href="codes.html">CODES</a> </li>
+        <li itemprop="name"><a href="teaching.html">TEACHING</a> </li>
+   </ul>
+</div>
+
+
+
+<div class="block">
 <table border=0>
-<tr><td valign="top">
+<tr><p></p><td valign="top">
 <img src="Figures/mugshot.jpg" hspace="20" width=166px height=221.33px></td>
 <td valign="top">
 My name is Mohammad Sarraf Joshaghani, and I am currently a
@@ -49,17 +64,29 @@ My research interests include the following:
 <li>Solvers and preconditioners</li>
 </ol>
 <!-- <a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> | -->  
-<a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> </p>
+<a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> |
+<a href="https://github.com/msarrafj" target="_blank">Github</a> |
+<a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a> </p>
 </td>
 </tr>
 </table>
-<dl>
-  <dt><a href="mailto:m.sarraf.j@rice.edu" >Email</a> |
-<a href="https://github.com/msarrafj" target="_blank">Github</a> |
-<a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a> </dt>
+<dl style="padding-left:10px">
+  <h4 style="margin-bottom:5px"> Contact Information</h4> <small>
+  <b>Address:</b> Rice University
+  <br> Computational and Applied Mathematics Department
+  <br> 6100 Main St-MS 134
+  <br> Houston, TX 77005
+  <p style="margin:5px"></p>
+  <b>Office:</b> Duncan Hall (DCH) 2001
+  <p style="margin:5px"></p>
+  <b>Email:</b> m.sarraf.j AT rice.edu
+  <!-- <a href="mailto:m.sarraf.j@rice.edu" >Email</a> -->
+</small>
 </dl>
 </p>
 <blockquote>
+
+</div>
 </body>
 </html>
 
