--- a/teaching.html
+++ b/teaching.html
@@ -30,15 +30,27 @@
 <!--Get your own code at fontawesome.com-->
 <title>Mohammad Sarraf Joshaghani's Codes</title>
 <body style="background-color:white">
-<h2><center>Teaching</center></h2>
-<blockquote>
-  <a href="index.html">Home</a> | 
-  <a href="Publications.html">Publications</a> |
-  <a href="research.html">Research</a> |
-  <a href="codes.html">Codes</a> | 
-  <a href="teaching.html">TEACHING</a> 
-</blockquote>
-<hr>
+<!-- <h2><center>Teaching</center></h2> -->
+<!-- <blockquote> -->
+<!--   <a href="index.html">Home</a> | --> 
+<!--   <a href="Publications.html">Publications</a> | -->
+<!--   <a href="research.html">Research</a> | -->
+<!--   <a href="codes.html">Codes</a> | --> 
+<!--   <a href="teaching.html">TEACHING</a> --> 
+<!-- </blockquote> -->
+<!-- <hr> -->
+
+<div class="topmenu">
+   <ul itemscope="" itemtype="http://www.schema.org/SiteNavigationElement">
+      <li itemprop="name"><a  href="index.html">HOME</a></li>
+      <li itemprop="name"><a  href="publications.html">PUBLICATIONS</a></li>
+      <li itemprop="name"><a href="research.html">RESEARCH</a> </li>
+      <li itemprop="name"><a href="codes.html">CODES</a> </li>
+        <li itemprop="name"><a class="active" href="teaching.html">TEACHING</a> </li>
+   </ul>
+</div>
+
+</a><div class="block"><a id="overview">
 <div class="col-24">
   <h3 style="margin-bottom:-0.3em; margin-top:1.25em"> Instructor </h3>
   <ul>
@@ -97,5 +109,7 @@
   <!-- <li>Research Mentor Training Workshop, Gulf Coast Consortia (Spring 2020) </li> -->
   <li>Future Faculty Training, University of Houston, (Fall 2017 - Spring 2018) </li>
 </ul>
+
+</div>
 
 </body></html>
