--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ My research interests include the following:
   <p style="margin:5px"></p>
   <b>Office:</b> Duncan Hall (DCH) 2001
   <p style="margin:5px"></p>
-  <b>Email:</b> m.sarraf.j AT rice.edu
-  <!-- <a href="mailto:m.sarraf.j@rice.edu" >Email</a> -->
+  <b>Email:</b> <a href="mailto:m.sarraf.j@rice.edu" target="_blank">m.sarraf.j@rice.edu</a>
 </small>
 </dl>
 </p>
