--- a/research.html
+++ b/research.html
@@ -29,7 +29,10 @@
   <!-- icons -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-<!--Get your own code at fontawesome.com-->
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
+
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 <body style="background-color:white">
 <!-- <h2><center>Research</center></h2> -->
