--- a/research.html
+++ b/research.html
@@ -3,6 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="Files/Sarraf.css">
 <link rel="stylesheet" type="text/css" href="Files/bibtex.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
  <!-- Toggle abstract and bibtex -->
   <script type="text/javascript">
       function toggle_visibility(id) {
@@ -28,10 +29,7 @@
 	</script>
   <!-- icons -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-
+<!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 <body style="background-color:white">
