--- a/research.html
+++ b/research.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="Files/Sarraf.css">
 <link rel="stylesheet" type="text/css" href="Files/bibtex.css">
 
+
  <!-- Toggle abstract and bibtex -->
   <script type="text/javascript">
       function toggle_visibility(id) {
@@ -15,7 +16,7 @@
       }
   </script>
   <!-- zoom in jquery -->
-	<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
+	<script type="text/javascript"  src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src='jquery.zoom.js'></script>
 	<script>
 		$(document).ready(function(){
@@ -29,7 +30,7 @@
 	</script>
   <!-- icons -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="//kit.fontawesome.com/a076d05399.js"></script>
 
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 <body style="background-color:white">
