--- a/research.html
+++ b/research.html
@@ -181,7 +181,7 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
 </pre>
 </td></tr>
 
-<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/LimiterDG"><i class="fas fa-keyboard"></i></a>  </td>
+<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/LimiterDG" target="_blank"><i class="fas fa-keyboard"></i></a>  </td>
 <td>
 <p>
  &nbsp Codes for this project is available [<a href="https://github.com/msarrafj/LimiterDG" target="_blank">here</a>]. 
@@ -229,7 +229,7 @@ the method appealing to reservoir simulators are: (i) maximum principle is satis
 </td></tr>
 
 
-<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/Vertex_based_method"><i class="fas fa-keyboard"></i></a>  </td>
+<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/Vertex_based_method" target="_blank"><i class="fas fa-keyboard"></i></a>  </td>
 <td>
 <p>
  &nbsp Codes for this project is available [<a href="https://github.com/msarrafj/Vertex_based_method" target="_blank">here</a>]. 
@@ -271,7 +271,7 @@ publisher={Elsevier}
 </pre>
 </td></tr>
  
-<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/Double_Porosity_Permeability"><i class="fas fa-keyboard"></i></a>  </td>
+<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/Double_Porosity_Permeability" target="_blank"><i class="fas fa-keyboard"></i></a>  </td>
 <td>
 <p>
  &nbsp Codes for this project is available [<a href="https://github.com/msarrafj/Double_Porosity_Permeability" target="_blank">here</a>]. 
@@ -360,11 +360,11 @@ publisher={Springer}
     <h3 style="display:inline">High performance and parallel computing</h3><p></p>
 
 The problems that arise in subsurface modeling and other applications involving flow through porous media are often 
-<a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#-large-scale-problems-in-geophysical-systems-">large-scale</a> in nature.
+<a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#-large-scale-problems-in-geophysical-systems-" target="_blank">large-scale</a> in nature.
 These problems cannot be solved on a standard desktop or by employing direct solvers; as such a computation will be prohibitively
 expensive.
-I regularly take advantage of <a href="https://github.com/msarrafj/HPC_composableSolver#-high-performance-computing-hpc"> high performance computing (HPC)</a> techniques to tackle these problems and use efficient parallel computing tools in my code developments. Commonly used finite element simulation packages and software are examined and <a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#solver-methodologies"> performance spectrum models</a>
- are employed to quickly analyze the performance and scalability across various hardware platforms, software implementations, and <a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#various-finite-elements-fes-for-solving-subsurface-problems"> numerical discretizations</a>. 
+I regularly take advantage of <a href="https://github.com/msarrafj/HPC_composableSolver#-high-performance-computing-hpc" target="_blank"> high performance computing (HPC)</a> techniques to tackle these problems and use efficient parallel computing tools in my code developments. Commonly used finite element simulation packages and software are examined and <a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#solver-methodologies" target="_blank"> performance spectrum models</a>
+ are employed to quickly analyze the performance and scalability across various hardware platforms, software implementations, and <a href="https://github.com/msarrafj/HPC_composableSolver/blob/main/README.md#various-finite-elements-fes-for-solving-subsurface-problems" target="_blank"> numerical discretizations</a>. 
 My research will continue to expand on solving multi-physics problems by using scalable solvers and preconditioners, devising efficient data structures and subroutines, and parallel communication which are provided in the state-of-the-art toolkits like PETSc and TAO.
 
 
@@ -404,7 +404,7 @@ publisher={Elsevier}
 </td></tr>
 
 
-<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/HPC_composableSolver"><i class="fas fa-keyboard"></i></a>  </td>
+<tr> <td style="vertical-align:center"><a href="https://github.com/msarrafj/HPC_composableSolver" target="_blank"><i class="fas fa-keyboard"></i></a>  </td>
 <td>
 <p>
  &nbsp Codes for this project is available [<a href="https://github.com/msarrafj/HPC_composableSolver" target="_blank">here</a>]. 
@@ -469,7 +469,7 @@ This paper presents a modeling framework&#8212mathematical model and computation
 
   </tbody></table>
 <p>
-<a href="https://github.com/msarrafj/Coupled-plasticity-diffusion"><i class="fas fa-keyboard"></i></a>&nbsp 
+<a href="https://github.com/msarrafj/Coupled-plasticity-diffusion" target="_blank"><i class="fas fa-keyboard"></i></a>&nbsp 
      Codes for this project is available [<a href="https://github.com/msarrafj/Coupled-plasticity-diffusion" target="_blank">here</a>]. 
 </p>
   </div>
