href fixed for publications

--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
 <b>M. S. Joshaghani</b>, V. Girault, B. Riviere,
 "A vertex scheme for two-phase flow in heterogeneous media",
 submitted to <b>Journal of Computational Physics</b>, 2021 
-[<a href="https://arxiv.org/abs/2103.03285">arXiv link</a>] 
+[<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('vertex21');">Abstract</a>]
 <div style="display:none" id="vertex21"><u>Abstract:</u><br>This paper presents the numerical solution of immiscible two-phase 
 flows in porous media, obtained by a first-order finite element method equipped with mass-lumping and flux up-winding. 
@@ -369,7 +369,7 @@ solutions for diffusion equations"
 <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">
   "Multi-scale and interface mechanics for porous media: mathematical models and computational frameworks"</a>, University of Houston, Houston, TX, USA, 2019.
 [<a 
-href="Files/Sarraf_PhD_Dissertation.pdf">click here to view</a>] 
+href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">click here to view</a>] 
 [<a href="#/"  onclick="toggle_visibility('PhDThesis');">Abstract</a>]
 <div style="display:none" id="PhDThesis"><u>Abstract:</u><br>
   <p>
