--- a/codes.html
+++ b/codes.html
@@ -69,7 +69,7 @@
 M. S. Joshaghani, B. Riviere, and M. Sekachev,
 <b>Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow</b><br>
 submitted to <i>Computer Methods in Applied Mechanics and Engineering Journal</i>, 2021 
-[<a href="https://arxiv.org/abs/2106.11807">arXiv link</a>] 
+[<a href="https://arxiv.org/abs/2106.11807" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('incompressible21');">Abstract</a>]
 <div style="display:none" id="incompressible21"><u>Abstract:</u><br>
 This paper proposes a fully implicit numerical scheme for immiscible incompressible two-phase flow in porous media taking into account gravity, capillary effects, and heterogeneity. The objective is to develop a fully implicit stable discontinuous Galerkin (DG) solver for this system that is accurate, bound-preserving, and locally mass conservative. To achieve this, we augment our DG formulation with post-processing flux and slope limiters. The proposed framework is applied to several benchmark problems and the discrete solutions are shown to be accurate, to satisfy the maximum principle and local mass conservation. 
@@ -120,7 +120,7 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
 M. S. Joshaghani, V. Girault, and B. Riviere,
 <b>A vertex scheme for two-phase flow in heterogeneous media</b><br>
 submitted to <i>Journal of Computational Physics</i>, 2021 
-[<a href="https://arxiv.org/abs/2103.03285">arXiv link</a>] 
+[<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('vertex21');">Abstract</a>]
 <div style="display:none" id="vertex21"><u>Abstract:</u><br>This paper presents the numerical solution of immiscible two-phase 
 flows in porous media, obtained by a first-order finite element method equipped with mass-lumping and flux up-winding. 
