updated publicaftions section

--- a/publications.html
+++ b/publications.html
@@ -35,12 +35,103 @@
 </div>
 
 <div class="block">
-<h3>Preprints</h3>
+<!-- <h3>Preprints</h3> -->
+<!-- <ol> -->
+<!-- <li> -->
+<!-- <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev, -->
+<!-- <a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521007313" target="_blank"> -->
+<!-- "Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow"</a>, -->
+<!-- <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 2022 -->
+<!-- [<a href="https://arxiv.org/abs/2106.11807" target="_blank">arXiv link</a>] --> 
+<!-- [<a href="#/"  onclick="toggle_visibility('incompressible21');">Abstract</a>] -->
+<!-- <div style="display:none" id="incompressible21"><u>Abstract:</u><br> -->
+<!-- This paper proposes a fully implicit numerical scheme for immiscible incompressible two-phase flow in porous media taking into account gravity, capillary effects, and heterogeneity. The objective is to develop a fully implicit stable discontinuous Galerkin (DG) solver for this system that is accurate, bound-preserving, and locally mass conservative. To achieve this, we augment our DG formulation with post-processing flux and slope limiters. The proposed framework is applied to several benchmark problems and the discrete solutions are shown to be accurate, to satisfy the maximum principle and local mass conservation. --> 
+<!-- </div> --> 
+<!-- [<a href="#/" onclick="toggle_visibility('incompressible21Bib');">BibTeX</a>]<div style="display: none" id="incompressible21Bib"> -->
+<!-- <pre> -->
+<!-- @article{joshaghani2022CMAME, -->
+<!-- title = {Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow}, -->
+<!-- author = {M.~S.~Joshaghani and B.~Riviere and M.~Sekachev}, -->
+<!-- journal = {Computer Methods in Applied Mechanics and Engineering}, -->
+<!-- volume = {391}, -->
+<!-- pages = {114550}, -->
+<!-- year = {2022}, -->
+<!-- } -->
+<!-- </pre> -->
+<!-- </li> -->
+
+
+
+
+<!-- <li> -->
+<!-- <b>M. S. Joshaghani</b>, V. Girault, B. Riviere, -->
+<!-- <a href="https://www.sciencedirect.com/science/article/pii/S0021999121006732" target="_blank"> -->
+<!-- "A vertex scheme for two-phase flow in heterogeneous media"</a>, -->
+<!-- <b>Journal of Computational Physics</b>, 2022 --> 
+<!-- [<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] --> 
+<!-- [<a href="#/"  onclick="toggle_visibility('vertex21');">Abstract</a>] -->
+<!-- <div style="display:none" id="vertex21"><u>Abstract:</u><br>This paper presents the numerical solution of immiscible two-phase --> 
+<!-- flows in porous media, obtained by a first-order finite element method equipped with mass-lumping and flux up-winding. --> 
+<!-- The unknowns are the physical phase pressure and phase saturation. Our numerical experiments confirm that the method converges --> 
+<!-- optimally for manufactured solutions. For both structured and unstructured meshes, we observe the high-accuracy wetting saturation --> 
+<!-- profile that ensures minimal numerical diffusion at the front. Performing several examples of quarter-five spot problems in two and --> 
+<!-- three dimensions, we show that the method can easily handle heterogeneities in the permeability field. Two distinct features that make --> 
+<!-- the method appealing to reservoir simulators are: (i) maximum principle is satisfied, and (ii) mass balance is locally conserved. --> 
+<!-- </div> --> 
+<!-- [<a href="#/" onclick="toggle_visibility('vertex21bibtex');">BibTeX</a>]<div style="display: none" id="vertex21bibtex"> -->
+<!-- <pre> -->
+<!-- @article{joshaghani2022JCP, -->
+<!-- title = {A vertex scheme for two-phase flow in heterogeneous media}, -->
+<!-- author = {M.~S.~Joshaghani and V.~Girault and B.~Riviere} -->
+<!-- journal = {Journal of Computational Physics}, -->
+<!-- volume = {449}, -->
+<!-- pages = {110778}, -->
+<!-- year = {2022}, -->
+<!-- } -->
+<!-- </pre> -->
+<!-- </li> -->
+
+
+
+<!-- <li> -->
+<!-- <b>M. S. Joshaghani</b>, and K. B. Nakshatrala, -->
+<!-- <a href="https://global-sci.org/intro/article_detail/cicp/20789.html" target="_blank"> -->
+<!--   "A modeling framework for coupling plasticity with species diffusion"</a>, -->
+<!--  <b>Communications in Computational Physics</b>, 2022 -->
+<!-- [<a href="https://arxiv.org/abs/2011.06652" target="_blank">arXiv link</a>] --> 
+<!-- [<a href="#/"  onclick="toggle_visibility('plasticity20');">Abstract</a>] -->
+<!-- <div style="display:none" id="plasticity20"><u>Abstract:</u><br> -->
+<!-- This work presents a modeling framework&#8212mathematical model and computational framework&#8212to study the response of a plastic material due to the presence and transport of a chemical species in the host material. Such a modeling framework is important to a wide variety of problems ranging from Li-ion batteries, moisture diffusion in cementitious materials, hydrogen diffusion in metals, to consolidation of soils under severe loading-unloading regimes. The mathematical model incorporates experimental observations reported in the literature on how (elastic and plastic) material properties change because of the presence and transport of a chemical species. Also, the model accounts for one-way (transport affects the deformation but not vice versa) and two-way couplings between deformation and transport subproblems. The resulting coupled equations are not amenable to analytical solutions; so, we present a robust computational framework for obtaining numerical solutions. Given that popular numerical formulations do not produce nonnegative solutions, the computational framework uses an optimized-based nonnegative formulation that respects physical constraints (e.g., nonnegative concentrations). For completeness, we will also show the effect and propagation of the negative concentrations, often produced by contemporary transport solvers, into the overall predictions of deformation and concentration fields. Notably, anisotropy of the diffusion process exacerbates these unphysical violations. Using representative numerical examples, we will discuss how the concentration field affects plastic deformations of a degrading solid. Based on these numerical examples, we also discuss how plastic zones spread because of material degradation. To illustrate how the proposed computational framework performs, we report various performance metrics such as optimization iterations and time-to-solution. --> 
+<!-- </div> --> 
+<!-- [<a href="#/" onclick="toggle_visibility('plasticity20bibtex');">BibTeX</a>]<div style="display: none" id="plasticity20bibtex"> -->
+<!-- <pre> -->
+<!-- @article{joshaghani2022CiCP, -->
+<!-- title = {A Modeling Framework for Coupling Plasticity with Species Diffusion}, -->
+<!-- author = {M.~S.~Joshaghani and K.~B.~Nakshatrala}, -->
+<!-- journal = {Communications in Computational Physics}, -->
+<!-- year = {2022}, -->
+<!-- volume = {32}, -->
+<!-- number = {1}, -->
+<!-- pages = {83--125}, -->
+<!-- } -->
+<!-- </pre> -->
+<!-- </li> -->
+
+
+
+
+
+
+</ol>
+<!--  -->
+<h3>Journal Publications</h3>
 <ol>
+<!--  -->
 <li>
 <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
-"Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow",
-submitted to <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 2021 
+<a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782521007313" target="_blank">
+"Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow"</a>,
+<b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 2022
 [<a href="https://arxiv.org/abs/2106.11807" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('incompressible21');">Abstract</a>]
 <div style="display:none" id="incompressible21"><u>Abstract:</u><br>
@@ -48,11 +139,13 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
 </div> 
 [<a href="#/" onclick="toggle_visibility('incompressible21Bib');">BibTeX</a>]<div style="display: none" id="incompressible21Bib">
 <pre>
-@article{joshaghani2021Incompressible,
-  title={Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow},
-  author={M.~S.~Joshaghani and B.~Riviere and M.~Sekachev},
-  journal={arXiv preprint arXiv:2106.11807},
-  year={2021}
+@article{joshaghani2022CMAME,
+title = {Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow},
+author = {M.~S.~Joshaghani and B.~Riviere and M.~Sekachev},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {391},
+pages = {114550},
+year = {2022},
 }
 </pre>
 </li>
@@ -62,8 +155,9 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
 
 <li>
 <b>M. S. Joshaghani</b>, V. Girault, B. Riviere,
-"A vertex scheme for two-phase flow in heterogeneous media",
-submitted to <b>Journal of Computational Physics</b>, 2021 
+<a href="https://www.sciencedirect.com/science/article/pii/S0021999121006732" target="_blank">
+"A vertex scheme for two-phase flow in heterogeneous media"</a>,
+<b>Journal of Computational Physics</b>, 2022 
 [<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('vertex21');">Abstract</a>]
 <div style="display:none" id="vertex21"><u>Abstract:</u><br>This paper presents the numerical solution of immiscible two-phase 
@@ -76,11 +170,13 @@ the method appealing to reservoir simulators are: (i) maximum principle is satis
 </div> 
 [<a href="#/" onclick="toggle_visibility('vertex21bibtex');">BibTeX</a>]<div style="display: none" id="vertex21bibtex">
 <pre>
-@article{joshaghani2021vertex,
-  title={A vertex scheme for two-phase flow in heterogeneous media},
-  author={M.~S.~Joshaghani and V.~Girault and B.~Riviere},
-  journal={arXiv preprint arXiv:2103.03285},
-  year={2021}
+@article{joshaghani2022JCP,
+title = {A vertex scheme for two-phase flow in heterogeneous media},
+author = {M.~S.~Joshaghani and V.~Girault and B.~Riviere}
+journal = {Journal of Computational Physics},
+volume = {449},
+pages = {110778},
+year = {2022},
 }
 </pre>
 </li>
@@ -89,38 +185,31 @@ the method appealing to reservoir simulators are: (i) maximum principle is satis
 
 <li>
 <b>M. S. Joshaghani</b>, and K. B. Nakshatrala,
-"A modeling framework for coupling plasticity with species diffusion",
-submitted to <b>International Journal for Numerical Methods in Engineering</b>, 2020 
+<a href="https://global-sci.org/intro/article_detail/cicp/20789.html" target="_blank">
+  "A modeling framework for coupling plasticity with species diffusion"</a>,
+ <b>Communications in Computational Physics</b>, 2022
 [<a href="https://arxiv.org/abs/2011.06652" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('plasticity20');">Abstract</a>]
 <div style="display:none" id="plasticity20"><u>Abstract:</u><br>
-This paper presents a modeling framework&#8212mathematical model and computational framework&#8212to study the response of a plastic material due to the presence and transport of a chemical species in the host material. Such a modeling framework is important to a wide variety of problems ranging from Li-ion batteries, moisture diffusion in cementitious materials, hydrogen diffusion in metals, to consolidation of soils under severe loading-unloading regimes. The mathematical model incorporates experimental observations reported in the literature on how (elastic and plastic) material properties change because of the presence and transport of a chemical species. Also, the model accounts for one-way (transport affects the deformation but not vice versa) and two-way couplings between deformation and transport subproblems. The resulting coupled equations are not amenable to analytical solutions; so, we present a robust computational framework for obtaining numerical solutions. Given that popular numerical formulations do not produce nonnegative solutions, the computational framework uses an optimized-based nonnegative formulation that respects physical constraints (e.g., nonnegative concentrations). For completeness, we will also show the effect and propagation of the negative concentrations, often produced by contemporary transport solvers, into the overall predictions of deformation and concentration fields. Notably, anisotropy of the diffusion process exacerbates these unphysical violations. Using representative numerical examples, we will discuss how the concentration field affects plastic deformations of a degrading solid. Based on these numerical examples, we also discuss how plastic zones spread because of material degradation. To illustrate how the proposed computational framework performs, we report various performance metrics such as optimization iterations and time-to-solution. 
+This work presents a modeling framework&#8212mathematical model and computational framework&#8212to study the response of a plastic material due to the presence and transport of a chemical species in the host material. Such a modeling framework is important to a wide variety of problems ranging from Li-ion batteries, moisture diffusion in cementitious materials, hydrogen diffusion in metals, to consolidation of soils under severe loading-unloading regimes. The mathematical model incorporates experimental observations reported in the literature on how (elastic and plastic) material properties change because of the presence and transport of a chemical species. Also, the model accounts for one-way (transport affects the deformation but not vice versa) and two-way couplings between deformation and transport subproblems. The resulting coupled equations are not amenable to analytical solutions; so, we present a robust computational framework for obtaining numerical solutions. Given that popular numerical formulations do not produce nonnegative solutions, the computational framework uses an optimized-based nonnegative formulation that respects physical constraints (e.g., nonnegative concentrations). For completeness, we will also show the effect and propagation of the negative concentrations, often produced by contemporary transport solvers, into the overall predictions of deformation and concentration fields. Notably, anisotropy of the diffusion process exacerbates these unphysical violations. Using representative numerical examples, we will discuss how the concentration field affects plastic deformations of a degrading solid. Based on these numerical examples, we also discuss how plastic zones spread because of material degradation. To illustrate how the proposed computational framework performs, we report various performance metrics such as optimization iterations and time-to-solution. 
 </div> 
 [<a href="#/" onclick="toggle_visibility('plasticity20bibtex');">BibTeX</a>]<div style="display: none" id="plasticity20bibtex">
 <pre>
-@article{joshaghani2020modeling,
-  title={A modeling framework for coupling plasticity with species diffusion},
-  author={M.~S.~Joshaghani and N.~B.~Nakshatrala},
-  journal={arXiv preprint arXiv:2011.06652},
-  year={2020}
+@article{joshaghani2022CiCP,
+title = {A Modeling Framework for Coupling Plasticity with Species Diffusion},
+author = {M.~S.~Joshaghani and K.~B.~Nakshatrala},
+journal = {Communications in Computational Physics},
+year = {2022},
+volume = {32},
+number = {1},
+pages = {83--125},
 }
 </pre>
 </li>
-
-
-
-
-
-
-</ol>
-<!--  -->
-<h3>Journal Publications</h3>
-<ol>
-<!--  -->
 <li> <b>M. S. Joshaghani</b>,
 J. Chang, K. B. Nakshatrala, and M. G. Knepley,
 <a href="https://www.sciencedirect.com/science/article/pii/S0021999119301378" target="_blank">
-  "On composable block solvers and performance spectrum analysis for double porosity/permeability model"</a>, <b>Journal of Computational Physic</b>,
+  "On composable block solvers and performance spectrum analysis for double porosity/permeability model"</a>, <b>Journal of Computational Physics</b>,
 386: 428-466, 2019
 [<a 
 href="https://arxiv.org/abs/1808.08328" target="_blank">arXiv link</a>] 
@@ -395,6 +484,11 @@ institution = {University of Houston},
 
 <h3>Conference presentations and Talks</h3>
 <ol>
+
+<li>
+<i>"Maximum-principle-preserving vertex-based method for two phase flows in porous media"</i>,
+<u>4th Annual Meeting of the SIAM TXLA </u>, South Padre Island, November 2021. [invited talk]
+</li>
 
 <li>
 <i>"Maximum-principle-satisfying discontinuous Galerkin methods for compressible two-phase immiscible flow"</i>,
