--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@
   <li>Discontinuous Galerkin finite element</li>
   <li>Maximum-principle-satisfying methods for hyperbolic conservation laws</li>
   <li>High performance and parallel computing</li>
-  <li>Scaleble solvers and preconditioners</li>
+  <li>Scalable solvers and preconditioners</li>
   </ul>
   </div>
   <!-- <div class="col-12" style="text-align: right;"> -->
@@ -124,7 +124,7 @@ I am interested in both designing new and enhancing current theoretical and comp
     <!-- + Developed a low-order FE solver for incompressible two-phase flow systems in heterogeneous porous media that captures high-accuracy and bound-preserving saturation profiles in 2D and 3D benchmark problems. -->
     
 
-My research focuses on integrating novel numerical techniques (such as multi-stage limiting, vertex-based schemes, and optimization-based bounding) with classical methods (such as FD, FE, FV, LBM, etc) to design multiphysics reservoir simulators that is accurate, robust, mass-conservative, and is guarantied to satisfy "maximum-principle". Various subsurface benchmark problems are being studied to account for gravity, capillary effects, (rock and phases) compressibility, anisotropy, and heterogeneity.
+My research focuses on integrating novel numerical techniques (such as multi-stage limiting, vertex-based schemes, and optimization-based bounding) with classical methods (such as FD, FE, FV, LBM, etc) to design multiphysics reservoir simulators that are accurate, robust, mass-conservative, and are guarantied to satisfy "maximum-principle". Various subsurface benchmark problems are being studied to account for gravity, capillary effects, (rock and phases) compressibility, anisotropy, and heterogeneity.
 
     <p></p>
     <h4 style="display:inline"> &bull; Porous media with multi-scale pore networks</h4><p></p>
@@ -165,7 +165,7 @@ Many important processes in nature (such as physical and biogeochemical processe
 M. S. Joshaghani, B. Riviere, and M. Sekachev,
 <b>Maximum-principle-satisfying discontinuous Galerkin methods for incompressible two-phase immiscible flow</b><br>
 submitted to <i>Computer Methods in Applied Mechanics and Engineering Journal</i>, 2021 
-[<a href="https://arxiv.org/abs/2106.11807">arXiv link</a>] 
+[<a href="https://arxiv.org/abs/2106.11807" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('incompressible21');">Abstract</a>]
 <div style="display:none" id="incompressible21"><u>Abstract:</u><br>
 This paper proposes a fully implicit numerical scheme for immiscible incompressible two-phase flow in porous media taking into account gravity, capillary effects, and heterogeneity. The objective is to develop a fully implicit stable discontinuous Galerkin (DG) solver for this system that is accurate, bound-preserving, and locally mass conservative. To achieve this, we augment our DG formulation with post-processing flux and slope limiters. The proposed framework is applied to several benchmark problems and the discrete solutions are shown to be accurate, to satisfy the maximum principle and local mass conservation. 
@@ -207,7 +207,7 @@ M. S. Joshaghani, B. Riviere, and M. Sekachev,
 M. S. Joshaghani, V. Girault, and B. Riviere,
 <b>A vertex scheme for two-phase flow in heterogeneous media</b><br>
 submitted to <i>Journal of Computational Physics</i>, 2021 
-[<a href="https://arxiv.org/abs/2103.03285">arXiv link</a>] 
+[<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('vertex21');">Abstract</a>]
 <div style="display:none" id="vertex21"><u>Abstract:</u><br>This paper presents the numerical solution of immiscible two-phase 
 flows in porous media, obtained by a first-order finite element method equipped with mass-lumping and flux up-winding. 
