--- a/publications.html
+++ b/publications.html
@@ -126,6 +126,33 @@
 <!--  -->
 <h3>Journal Publications</h3>
 <ol>
+
+
+<li>
+<b>M. S. Joshaghani</b> and B. Riviere,
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/nme.7396" target="_blank">
+"Bound-preserving discontinuous Galerkin methods for compressible two-phase flows in porous media"</a>,
+<b>International Journal for Numerical Methods in Engineering</b>, 2022
+[<a href="https://arxiv.org/abs/2309.01908" target="_blank">arXiv link</a>] 
+[<a href="#/"  onclick="toggle_visibility('compressible23');">Abstract</a>]
+<div style="display:none" id="compressible23"><u>Abstract:</u><br>
+This paper presents a numerical study of immiscible, compressible two-phase flows in porous media, that takes into account heterogeneity, gravity, anisotropy, and injection/production wells. We formulate a fully implicit stable discontinuous Galerkin solver for this system that is accurate, that respects the maximum principle for the approximation of saturation, and that is locally mass conservative. To completely eliminate the overshoot and undershoot phenomena, we construct a flux limiter that produces bound-preserving elementwise average of the saturation. The addition of a slope limiter allows to recover a pointwise bound-preserving discrete saturation. Numerical results show that both maximum principle and monotonicity of the solution are satisfied. The proposed flux limiter does not impact the local mass error and the number of nonlinear solver iterations. 
+</div> 
+[<a href="#/" onclick="toggle_visibility('compressible23Bib');">BibTeX</a>]<div style="display: none" id="compressible23Bib">
+<pre>
+@article{joshaghani2023IJNME,
+title = {Bound-preserving discontinuous Galerkin methods for compressible two-phase flows in porous media},
+author = {M.~S.~Joshaghani and B.~Riviere},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {},
+pages = {},
+year = {},
+}
+</pre>
+</li>
+
+
+
 <!--  -->
 <li>
 <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
@@ -419,11 +446,6 @@ year={2013}
 </ol>
 <h3>In-Preparation</h3>
 <ol>
-<li>
-<b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
-"A bound-preserving discontinuous
-Galerkin method for compressible two-phase flow"
-</li>
 
 
 
